# aktienkurse

./: .gitignore  CMakeLists.txt  README.md  readme.MD
dokumentaion/: UML_Diagramm.drawio  Unbenanntes Diagramm.drawio
include/: actions.h  ausgabe_feld.h  ausgabe_knopf.h  button.h  eingabe_feld.h  global_defines.h  gui.h  knopf.h  my_includes.h  rechteck.h  speicher_knopf.h  textbox.h
sources/: button.cpp  button.h  drawing.cpp  drawing.h  global_includes.h  global_stuff.h  main.cpp  reactions.cpp  reactions.h  speicher.cpp  speicher.h
src/: actions.cpp  ausgabe_feld.cpp  ausgabe_knopf.cpp  button.cpp  eingabe_feld.cpp  gui.cpp  knopf.cpp  main.cpp  rechteck.cpp  speicher_knopf.cpp  textbox.cpp
